# StreamAttn

./: .env.example  .gitignore  Dockerfile  Index.md  MANIFEST.in  README.md  bench_results_custom.json  pyproject.toml  requirements.txt  setup.py
Cuda/: advanced_flash_attention_double_buffer.cu  multi_gpu_flash_attention.cu
Triton/:  multi_gpu_flash_attention_triton.py  advanced_flash_attention_triton.py
artifacts/: seed_only_direct_below8_h100_gate.json  seed_only_split_seed_below8_h100.json  seed_only_split_seed_h100_smoke.json
benchmarks/: analyze_gate0_kv_group_repair.py  build_gate0_fused_hybrid_policy.py  build_gate0_splitk_policy.py  build_gate0_verification_gated_policy.py  build_seed_policy_stress_prompts.py  capture_real_qk_decode.py  certified_attention_probe.py  check_seed_only_policy_route_smoke.py  compile_streamattn_seed_policy.py  dump_gate1_ir.py  estimate_splitk_inline_projection.py  modal_certified_smoke.py  modal_compile_streamattn_seed_policy.py  modal_decode_backend_integration_probe.py  modal_decode_backend_launch_floor.py  modal_flashinfer_custom_jit_head_mode_smoke.py  modal_flashinfer_single_decode.py  modal_gate0_candidate_filters.py  modal_gate0_downstream_error.py  modal_gate0_hybrid_component_floors.py  modal_gate0_hybrid_correction.py  modal_gate0_kv_group_hybrid_backend.py  modal_gate0_kv_group_repair_real.py  modal_gate0_logit_replay.py  modal_gate0_projection_ncu.py  modal_gate0_real_k_bounds.py  modal_gate0_seed_only_batched_logit_safety.py  modal_gate0_seed_only_closed_loop_rollout.py  modal_gate0_seed_only_flashinfer_sweep.py  (+144 more)
(+141 files in other folders)
